[tool.poetry]
name = "sierra_madre_auth"
version = "0.1.0"
description = "Reusable auth sdk for flask"
authors = ["Alexander Ríos"]
packages = [{ include = "sierra_madre_auth" }]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sierra_madre_core = {url = "https://github.com/sierra-madre/core-py-sdk/releases/download/v1.0.1/sierra_madre_core-0.1.0-py3-none-any.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
