[tool.poetry]
name = "sierra_madre_auth"
version = "1.1.0"
description = "Reusable auth sdk for flask"
authors = ["Alexander Ríos"]
packages = [{ include = "sierra_madre_auth" }]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sierra-madre-core = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
